Changed name to full name

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
-Mutabazi Christian <c.mutabazi@alustudent.com>
-John Obodai <j.obodai@alustudent.com>
+# CONTRIBUTORS
+
+-Mutabazi Christian <c.mutabazi@alustudent.com>
+-John Odai Obodai <j.obodai@alustudent.com>
