--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # CONTRIBUTORS
 # This file lists all individuals having contributed content to the repository
 
--Mutabazi Christian <c.mutabazi@alustudent.com>
--John Odai Obodai <j.obodai@alustudent.com>
+Mutabazi Christian <c.mutabazi@alustudent.com>
+John Odai Obodai <j.obodai@alustudent.com>
